# recall-app

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.claude/: settings.json  settings.local.json
.cursor/rules/: agents-md-update.mdc
.github/workflows/: lint.yml  pages.yml  release.yml  test.yml
design/logo/icons/: a-stack-dark.icns  a-stack-light.icns  b-rmark-dark.icns  b-rmark-light.icns  c-dayring-dark.icns  c-dayring-light.icns
design/logo/preview/: index.html
docs/: index.html
src/: app.html  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs  timeline.rs
src-tauri/src/commands/: harvest_done.rs  mod.rs  settings.rs  settings_git.rs  settings_github.rs  settings_ical.rs  settings_jira.rs  settings_ui.rs  settings_zulip.rs  timeline.rs
src-tauri/src/commands/timeline/: cache.rs  git.rs  github.rs  ical.rs  jira.rs  mod.rs  zulip.rs
src/components/: DayTimeline.svelte  Main.svelte  Settings.svelte  SettingsGit.svelte  TimelineDateNav.svelte  TimelineEvent.svelte  Welcome.svelte
src/components/settings/: Cache.svelte  Calendar.svelte  Git.svelte  GitHub.svelte  Jira.svelte  Settings.svelte  System.svelte  UI.svelte  Zulip.svelte
src/components/ui/: LanguageSwitcher.svelte  Loading.svelte  MissingSettings.svelte  NyanCat.svelte  PasswordInput.svelte  Travolta.svelte  Waiting.svelte
src/lib/: i18n.svelte.ts  mock-timeline-data.ts  nav-state.svelte.ts  theme.ts  timeline.ts  translations.ts
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/calendar/: calendar.svelte  index.ts
src/lib/components/ui/card/: card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css  layout.scss  tailwind-base.css
(+34 files in other folders)
