[package]
name = "recall-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Benjamin Rasmussen"]
edition = "2021"

[lib]
name = "recall_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"
rusqlite = { version = "0.39", features = ["bundled"] }
once_cell = "1.21"
tauri-plugin-dialog = "2.7.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v5"] }
ical = "0.11"
rrule = "0.14"
tokio = { version = "1", features = ["rt"] }
ureq = { version = "3.3", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
